Add preparation and slack notification jobs

--- a/.github/workflows/oracle-db-password-rotation.yml
+++ b/.github/workflows/oracle-db-password-rotation.yml
@@ -69,15 +69,53 @@ permissions:
   id-token: write
 
 jobs:
+
+  oracle_password_preparation:
+    name: oracle-password-preparation
+    runs-on: ubuntu-latest
+    continue-on-error: false
+    outputs:
+      TargetEnvironment: ${{ steps.prepare.outputs.TargetEnvironment }}
+      SlackChannel: ${{ steps.prepare.outputs.SlackChannel }}
+      JobId: ${{ github.job }}
+    steps:
+
+      - name: Prepare Ansbile Target Environment And Slack Channel
+        id: prepare
+        run: |
+          if [[ "${{ github.event_name }}" == "workflow_dispatch" ]]
+          then
+            TargetEnvironment="${{ github.event.inputs.TargetEnvironment }}"
+            VerboseOutput="${{ github.event.inputs.VerboseOutput }}"
+            AnsibleForks="${{ github.event.inputs.AnsibleForks }}"
+          elif [[ "${{ github.event_name }}" == "schedule" ]]
+          then
+            TargetEnvironment="${{ inputs.TargetEnvironment }}"
+            VerboseOutput=""
+            AnsibleForks=""
+          fi
+          echo "TargetEnvironment=${TargetEnvironment}" >> $GITHUB_OUTPUT
+          echo "VerboseOutput=${VerboseOutput}" >> $GITHUB_OUTPUT
+          echo "AnsibleForks=${AnsibleForks}" >> $GITHUB_OUTPUT
+
+          Environment=$(echo ${TargetEnvironment} | rev | cut -d'-' -f1 | rev)
+          if [[ "${Environment}" == "production" || "${Environment}" == "prod" ]]; then
+            echo "SlackChannel=delius-aws-oracle-prod-alerts" >> $GITHUB_OUTPUT
+          else
+            echo "SlackChannel=delius-aws-oracle-dev-alerts" >> $GITHUB_OUTPUT
+          fi
+
   oracle_duplicate_in_progress:
+    needs: oracle_password_preparation
     name: oracle-duplicate-in-progress
-    environment: ${{ github.event.inputs.TargetEnvironment }}-preapproved
+    environment: ${{ needs.oracle_password_preparation.outputs.TargetEnvironment }}-preapproved
     runs-on: ubuntu-latest
     container:
       image: ghcr.io/ministryofjustice/hmpps-delius-operational-automation:0.41.0
     continue-on-error: false
     outputs:
       SkipPasswordRotation: ${{ steps.checkduplicaterunning.outputs.SkipPasswordRotation }}
+      JobId: ${{ github.job }}
     steps:
 
       - name: Configure AWS Credentials
@@ -92,14 +130,7 @@ jobs:
         id: checkduplicaterunning
         shell: bash
         run: |
-          if [[ "${{ github.event_name }}" == "workflow_dispatch" ]]
-          then
-            TargetEnvironment="${{ github.event.inputs.TargetEnvironment }}"
-          elif [[ "${{ github.event_name }}" == "schedule" ]]
-          then
-            TargetEnvironment="${{ inputs.TargetEnvironment }}"
-          fi
-          TargetEnvironment=environment_name_$(echo ${TargetEnvironment} | sed 's/dev/development_dev/;s/test/test_test/;s/training/test_training/;s/stage/preproduction_stage/;s/preprod/preproduction_preprod/;s/-/_/g')
+          TargetEnvironment=environment_name_$(echo ${{ needs.oracle_password_preparation.outputs.TargetEnvironment }} | sed 's/dev/development_dev/;s/test/test_test/;s/training/test_training/;s/stage/preproduction_stage/;s/preprod/preproduction_preprod/;s/-/_/g')
           DUPLICATE_JOBS_STATUS=$(aws ssm get-parameters --region eu-west-2 --names "/oracle-duplicate/${TargetEnvironment}_delius_primarydb" "/oracle-duplicate/${TargetEnvironment}_mis_primarydb" |  jq -r '.Parameters[].Value' | jq -r '.Phase' | uniq)
           if [[ "${DUPLICATE_JOBS_STATUS}" == "Duplicate Started" ]]
           then
@@ -109,8 +140,8 @@ jobs:
   oracle_password_rotation:
     if: ${{ needs.oracle_duplicate_in_progress.outputs.SkipPasswordRotation != 'yes' }}
     name: oracle-password-rotation
-    needs: oracle_duplicate_in_progress
-    environment: ${{ github.event.inputs.TargetEnvironment }}-preapproved
+    needs: [oracle_password_preparation,oracle_duplicate_in_progress]
+    environment: ${{ needs.oracle_password_preparation.outputs.TargetEnvironment }}-preapproved
     runs-on: ubuntu-latest
     container:
       image: ghcr.io/ministryofjustice/hmpps-delius-operational-automation:0.41.0
@@ -121,6 +152,7 @@ jobs:
       TargetEnvironmentName: ${{ steps.definetargets.outputs.TargetEnvironmentName }}
       RotateGroups: ${{ steps.definetargets.outputs.targets }}
       IncludeSsmBucket: ${{ steps.definetargets.outputs.IncludeSsmBucket }}
+      JobId: ${{ github.job }}
     steps:
 
       - name: Checkout Ansible Playbooks and Roles From hmpps-delius-operation-automation
@@ -166,13 +198,7 @@ jobs:
         working-directory: ${{ env.inventory }}
         run: |
           targets=""
-          if [[ "${{ github.event_name }}" == "workflow_dispatch" ]]
-          then
-            TargetEnvironment="${{ github.event.inputs.TargetEnvironment }}"
-          elif [[ "${{ github.event_name }}" == "schedule" ]]
-          then
-            TargetEnvironment="${{ inputs.TargetEnvironment }}"
-          fi
+          TargetEnvironment="${{ needs.oracle_password_preparation.outputs.TargetEnvironment }}"
 
           if [[ ! "${TargetEnvironment}" =~ oem ]]
           then
@@ -240,17 +266,19 @@ jobs:
           ln -s $PWD/roles/ansible/roles $PWD/operations/playbooks/oracle_password_rotation/roles
           $database_command -i $inventory ${{ steps.definetargets.outputs.IncludeSsmBucket }} \
           -e rotate_groups=${{ steps.definetargets.outputs.targets }} \
-          -e environment_name=${{ steps.definetargets.outputs.TargetEnvironmentName }} ${{ github.event.inputs.VerboseOutput }} ${{ github.event.inputs.AnsibleForks }}
+          -e environment_name=${{ steps.definetargets.outputs.TargetEnvironmentName }} ${{ needs.oracle_password_preparation.outputs.VerboseOutput }} ${{ needs.oracle_password_preparation.outputs.AnsibleForks }}
 
   oracle_update_oem_targets:
     name: oracle-update-oem-targets
-    needs: oracle_password_rotation
+    needs: [oracle_password_preparation,oracle_password_rotation]
     environment: ${{ needs.oracle_password_rotation.outputs.TargetOemEnvironment }}-preapproved
     runs-on: ubuntu-latest
     container:
       image: ghcr.io/ministryofjustice/hmpps-delius-operational-automation:0.41.0
     timeout-minutes: 1440
     continue-on-error: false
+    outputs:
+      JobId: ${{ github.job }}
     steps:
 
       - name: Checkout Ansible Playbooks and Roles From hmpps-delius-operation-automation
@@ -307,17 +335,19 @@ jobs:
           -e target_environment_name=${{ needs.oracle_password_rotation.outputs.TargetEnvironmentName }} \
           -e sync_monitoring_passwords=yes \
           -e rotate_rman_password=no \
-          -e rotate_oem_passwords=no ${{ github.event.inputs.VerboseOutput }}
+          -e rotate_oem_passwords=no ${{ needs.oracle_password_preparation.outputs.VerboseOutput }}
 
   oracle_unlock_system_users:
     name: oracle-unlock-system-users
-    needs: [oracle_password_rotation, oracle_update_oem_targets]
-    environment: ${{ github.event.inputs.TargetEnvironment }}-preapproved
+    needs: [oracle_password_preparation,oracle_password_rotation, oracle_update_oem_targets]
+    environment: ${{ needs.oracle_password_preparation.outputs.TargetEnvironment }}-preapproved
     runs-on: ubuntu-latest
     container:
       image: ghcr.io/ministryofjustice/hmpps-delius-operational-automation:0.41.0
     timeout-minutes: 1440
     continue-on-error: false
+    outputs:
+      JobId: ${{ github.job }}
     steps:
 
       - name: Checkout Ansible Playbooks and Roles From hmpps-delius-operation-automation
@@ -357,5 +387,92 @@ jobs:
           export ANSIBLE_CONFIG=$ansible_config
           $database_command -i $inventory ${{ needs.oracle_password_rotation.outputs.IncludeSsmBucket }} \
           -e rotate_groups=${{ needs.oracle_password_rotation.outputs.RotateGroups }} \
-          -e environment_name=${{ github.event.inputs.TargetEnvironment }} \
-          -e unlock_system_passwords=yes ${{ github.event.inputs.VerboseOutput }} ${{ github.event.inputs.AnsibleForks }}
+          -e environment_name=${{ needs.oracle_password_preparation.outputs.TargetEnvironment }} \
+          -e unlock_system_passwords=yes ${{ needs.oracle_password_preparation.outputs.VerboseOutput }} ${{ needs.oracle_password_preparation.outputs.AnsibleForks }}
+
+  slack-notification:
+    if: ${{ failure() }}
+    runs-on: ubuntu-latest
+    container:
+      image: ghcr.io/ministryofjustice/hmpps-delius-operational-automation:0.41.0
+    needs: [oracle_password_preparation,oracle_password_rotation,oracle_update_oem_targets,oracle_unlock_system_users]
+    environment: ${{ needs.oracle_password_preparation.outputs.TargetEnvironment }}-preapproved
+    steps:
+
+      - name: Configure AWS Credentials
+        id: login-aws
+        uses: aws-actions/configure-aws-credentials@v4
+        with:
+          role-to-assume: "arn:aws:iam::${{ vars.AWS_ACCOUNT_ID }}:role/modernisation-platform-oidc-cicd"
+          role-session-name: "hmpps-delius-operational-automation-${{ github.run_number }}"
+          aws-region: "eu-west-2"
+
+      - name: Get Slack Token
+        id: get-slack-token
+        shell: bash
+        run: |
+          ACCOUNT_ID=$(aws sts get-caller-identity --query Account --output text)
+          OEM_ACCOUNT_ID=$(aws ssm get-parameter --name account_ids --region eu-west-2 --with-decryption  --output json | \
+                jq '.Parameter.Value' | tr -d '\' | sed 's/^\"//' | sed 's/\"$//' | \
+                jq -r 'to_entries | map(select(.key | contains("hmpps-oem-"))) | first' | jq -r '.value' )
+          SECRET_ARN="arn:aws:secretsmanager:eu-west-2:${OEM_ACCOUNT_ID}:secret:/oracle/database/EMREP/shared-passwords"
+          SECRET_VALUE=$(aws secretsmanager get-secret-value --secret-id "${SECRET_ARN}" --query SecretString --output json)
+          SLACK_TOKEN=$(echo ${SECRET_VALUE} | jq -r | jq -r 'to_entries[] | select(.key=="slack_token").value')
+          echo "slack_token=${SLACK_TOKEN}" >> $GITHUB_OUTPUT
+
+          if [[ "${{ needs.oracle_password_preparation.result }}" == "failure" ]]
+          then
+            echo "jobid=${{ needs.oracle_password_preparation.outputs.JobId }}" >> $GITHUB_OUTPUT
+          elif [[ "${{ needs.oracle_password_rotation.result }}" == "failure" ]]
+          then
+            echo "jobid=${{ needs.oracle_password_rotation.outputs.JobId }}" >> $GITHUB_OUTPUT
+          elif [[ "${{ needs.oracle_update_oem_targets.result }}" == "failure" ]]
+          then
+            echo "jobid=${{ needs.oracle_update_oem_targets.outputs.JobId }}" >> $GITHUB_OUTPUT 
+          elif [[ "${{ needs.oracle_unlock_system_users.result }}" == "failure" ]]
+          then
+            cho "jobid=${{ needs.oracle_unlock_system_users.outputs.JobId }}" >> $GITHUB_OUTPUT 
+          fi
+
+      - name: Slack Failure Notification
+        id: slack
+        uses: slackapi/slack-github-action@v1.26.0
+        with:
+            channel-id: ${{ needs.oracle_password_preparation.outputs.SlackChannel }}
+            payload: |
+              { 
+                "icon_emoji":"large_purple_circle",
+                "text":"Failed Password Rotation",
+                "blocks":[
+                  {
+                    "type": "section",
+                    "text": 
+                    {
+                      "type": "mrkdwn",
+                      "text": "Failed Password Rotation:"}
+                    },
+                    {
+                      "type": "section",
+                      "fields":[
+                          {
+                            "type": "mrkdwn",
+                            "text": "*Workflow:*\n<${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}|${{ github.workflow }}>"
+                          },
+                          {
+                            "type": "mrkdwn",
+                            "text": "*Job:*\n${{ steps.get-slack-token.outputs.jobid }}"
+                          },
+                          {
+                            "type": "mrkdwn",
+                            "text": "*Repo:*\n${{ github.repository }}"
+                          },
+                          {
+                            "type": "mrkdwn",
+                            "text": "*Environment:*\n${{ needs.oracle_password_preparation.outputs.TargetEnvironment }}"
+                          }
+                        ]
+                    }  
+                  ]
+                }
+        env:
+          SLACK_BOT_TOKEN: ${{ steps.get-slack-token.outputs.slack_token }}
