--- a/.github/workflows/oracle-db-password-rotation.yml
+++ b/.github/workflows/oracle-db-password-rotation.yml
@@ -423,6 +423,9 @@ jobs:
           if [[ "${{ needs.oracle_password_preparation.result }}" == "failure" ]]
           then
             echo "jobid=${{ needs.oracle_password_preparation.outputs.JobId }}" >> $GITHUB_OUTPUT
+          elif [[ "${{ needs.oracle_duplicate_in_progress.result }}" == "failure" ]]
+          then
+            echo "jobid=${{ needs.oracle_duplicate_in_progress.outputs.JobId }}" >> $GITHUB_OUTPUT
           elif [[ "${{ needs.oracle_password_rotation.result }}" == "failure" ]]
           then
             echo "jobid=${{ needs.oracle_password_rotation.outputs.JobId }}" >> $GITHUB_OUTPUT
