Test slack notification

--- a/.github/workflows/oracle-db-password-rotation.yml
+++ b/.github/workflows/oracle-db-password-rotation.yml
@@ -136,7 +136,7 @@ jobs:
           then
             echo "SkipPasswordRotation=yes" >> $GITHUB_OUTPUT
           fi
-
+          exit 1
   oracle_password_rotation:
     if: ${{ needs.oracle_duplicate_in_progress.outputs.SkipPasswordRotation != 'yes' }}
     name: oracle-password-rotation
