Add job to need list

--- a/.github/workflows/oracle-db-password-rotation.yml
+++ b/.github/workflows/oracle-db-password-rotation.yml
@@ -395,7 +395,7 @@ jobs:
     runs-on: ubuntu-latest
     container:
       image: ghcr.io/ministryofjustice/hmpps-delius-operational-automation:0.41.0
-    needs: [oracle_password_preparation,oracle_password_rotation,oracle_update_oem_targets,oracle_unlock_system_users]
+    needs: [oracle_password_preparation,oracle_duplicate_in_progress,oracle_password_rotation,oracle_update_oem_targets,oracle_unlock_system_users]
     environment: ${{ needs.oracle_password_preparation.outputs.TargetEnvironment }}-preapproved
     steps:
 
