Remove extra equal sign

--- a/.github/workflows/oracle-db-oem-password-rotation.yml
+++ b/.github/workflows/oracle-db-oem-password-rotation.yml
@@ -133,7 +133,7 @@ jobs:
           elif [[ "${{ github.event_name }}" == "schedule" ]]
           then
             TargetOemEnvironment="${{ inputs.TargetOemEnvironment }}"
-            TargetOemHost=="environment_name_$(echo ${{ inputs.TargetOemEnvironment }}  | sed 's/-/_/g')"
+            TargetOemHost="environment_name_$(echo ${{ inputs.TargetOemEnvironment }}  | sed 's/-/_/g')"
             TargetEnvironmentName="${{ inputs.TargetEnvironmentName }}"
             SyncMonitoringPasswords="${{ inputs.SyncMonitoringPasswords }}"
             RotateRMANPassword="${{ inputs.RotateRMANPassword }}"
