Unnecessary bracket removed

--- a/.github/workflows/oracle-db-secrets.yml
+++ b/.github/workflows/oracle-db-secrets.yml
@@ -1,5 +1,5 @@
 name: "Oracle: Secrets"
-run-name: "Oracle: ${{ github.event.inputs.TargetEnvironment) }}-secrets"
+run-name: "Oracle: ${{ github.event.inputs.TargetEnvironment }}-secrets"
 on:
   workflow_dispatch:
     inputs:
