Remove test users

--- a/playbooks/oracle_secrets/secrets/defaults/main.yml
+++ b/playbooks/oracle_secrets/secrets/defaults/main.yml
@@ -6,11 +6,7 @@ users:
       - dbsnmp
       - asmsnmp
     delius:
-      - delius_sysumf
-      - delius_sysumf1
-      - delius_sysumf2
-    mis:
-      - mis_sysumf
+      - sysumf
   application:
     delius:
       - delius_api_pool
