--- a/.github/workflows/ldap-remove-user-passwords.yaml
+++ b/.github/workflows/ldap-remove-user-passwords.yaml
@@ -1,11 +1,13 @@
-name: "LDAP: User Expiry"
+name: "LDAP: Remove all user passwords"
 on:
    workflow_call:
      inputs:
-       environment:
-         description: "The environment to run the task in"
-         required: true
-         type: string
+        environment:
+            required: true
+            type: choice
+            options:
+              - "dev"
+              - "test"
 jobs:
   create-backup:
     name: Create LDAP EFS Backup in ${{ inputs.environment }}
