Set database environment and remove duplicate task

--- a/playbooks/oracle_secrets/secrets/tasks/main.yml
+++ b/playbooks/oracle_secrets/secrets/tasks/main.yml
@@ -1,6 +1,7 @@
 - name: Set Boolean Variable If In Delius Account
   set_fact:
     is_delius: "{{ true if (environment_name.split('-')[:2] | join('-')) == 'delius-core' else false }}"
+    database_environment: "{{ target_host | replace(target_host.split('_')[-2] + '_' + target_host.split('_')[-1],'') }}"
 
 - name: Set List Of Applications
   set_fact:
@@ -18,10 +19,6 @@
 - name: Create Temporary Data Dictionary
   set_fact:
     data: "{{ users }}"
-
-- name: Create Dictionary With Applications Required
-  set_fact:
-    users_dict: "{{ data | ansible.utils.remove_keys(target=unwanted_application_list) }}"
 
 - name: Create Dictionary With Applications Required
   set_fact:
