--- a/playbooks/oracle_secrets/secrets/tasks/check_secrets.yml
+++ b/playbooks/oracle_secrets/secrets/tasks/check_secrets.yml
@@ -1,8 +1,10 @@
+
 - name: Application Secrets
   include_tasks: record_secret.yml
   vars:
     secret_name: "{{ environment_name + '-oracle' + ('-' + user_application + secret_suffix if (user_application != 'delius') else secret_suffix) }}"
     user_list: "{{ users_list }}"
+    delegated_host: "{{ database_environment + (user_application + '_primarydb' if (user_application != 'delius') else 'delius_primarydb') }}"
   when: user_type == 'application'
 
 - name: DBA Secrets
@@ -10,6 +12,7 @@
   vars:
     secret_name: "{{ environment_name + '-oracle' + ('-' + apl1 + secret_suffix if (apl1 != 'delius' and apl1 != 'all') else secret_suffix) }}"
     user_list: "{{ users_list }}"
+    delegated_host: "{{ database_environment + (apl1 + '_primarydb' if (apl1 != 'delius') else 'delius_primarydb') }}"
   loop: "{{ application_list | difference(unwanted_application_list) }}"
   loop_control:
     loop_var: apl1
