--- a/playbooks/oracle_secrets/secrets/tasks/record_secret.yml
+++ b/playbooks/oracle_secrets/secrets/tasks/record_secret.yml
@@ -2,6 +2,7 @@
   shell: |
     aws secretsmanager get-secret-value --secret-id {{ secret_name }} --region eu-west-2 --query SecretString --output text | jq -r .{{ item }}
   loop: "{{ user_list }}"
+  delegate_to: "{{ groups[delegated_host][0]}}"
   register: getsecretvalue
   changed_when: false
   no_log: true
@@ -40,3 +41,4 @@
         name: secretsmanager-passwords
       vars:
         secretsmanager_passwords: "{{ secret_password_dict }}"
+      delegate_to: "{{ groups[delegated_host][0]}}"
