--- a/playbooks/oracle_duplicate/rman-post-duplicate.yml
+++ b/playbooks/oracle_duplicate/rman-post-duplicate.yml
@@ -92,6 +92,12 @@
       include_tasks: register_with_rman.yml
 
     - block:
+
+        # Ensure that no sequences in duplicated environments overlap IDs
+        # with production IDs by incrementing these to a higher range
+        - name: Bump seqeunces
+          script: bump_sequences.sh
+
         # - name: Update objects
         #   include_tasks: ../delius_objects/playbook.yml
 
@@ -152,6 +158,13 @@
 #   import_playbook: notify-on-uplift-error.yml
 #   when: duplicate_target | regex_replace('(^.*)_.*$','\\1') == 'delius'
 #   tags: deploy_application
+
+# Re-run bumping of sequence numbers to capture any new sequences which may have
+# been added by the database uplift
+- name: Bump seqeunces
+  script: bump_sequences.sh
+  when: duplicate_target | regex_search('.*_delius_primarydb')
+
 
 # The database uplift should already have unblocked the listener but we do it again
 # just in case that step had failed
