Update ND_PARAMETERS post duplicate (#351)
* Update ND_PARAMETERS post duplicate

* Commit changes made by code formatters

---------

Co-authored-by: github-actions[bot] <github-actions[bot]@users.noreply.github.com>

--- a/playbooks/oracle_duplicate/rman-post-duplicate.yml
+++ b/playbooks/oracle_duplicate/rman-post-duplicate.yml
@@ -201,6 +201,10 @@
     action: "copy"
   when:
     - duplicate_target | regex_search('.*_delius_primarydb')
+
+- name: Update ND Parameter values
+  import_playbook: update-nd-parameters.yml
+  when: duplicate_target | regex_search('.*_delius_primarydb')
 # - name: Re-enable probation integration updates
 #   hosts: '{{ duplicate_target }}'
 #   gather_facts: no
