--- a/playbooks/oracle_duplicate/rman-post-duplicate.yml
+++ b/playbooks/oracle_duplicate/rman-post-duplicate.yml
@@ -94,7 +94,7 @@
     - block:
         # Ensure that no sequences in duplicated environments overlap IDs
         # with production IDs by incrementing these to a higher range
-        - name: Bump seqeunces
+        - name: Bump sequences
           script: bump_sequences.sh
 
         # - name: Update objects
@@ -160,9 +160,19 @@
 
 # Re-run bumping of sequence numbers to capture any new sequences which may have
 # been added by the database uplift
-- name: Bump seqeunces
-  script: bump_sequences.sh
-  when: duplicate_target | regex_search('.*_delius_primarydb')
+# Re-run bumping of sequence numbers to capture any new sequences which may have
+# been added by the database uplift
+- name: Re-bump sequences
+  hosts: '{{ duplicate_target }}'
+  gather_facts: no
+  become: yes
+  become_user: oracle
+
+  tasks:
+
+    - name: Bump sequences
+      script: bump_sequences.sh
+      when: duplicate_target | regex_search('.*_delius_primarydb')
 
 # The database uplift should already have unblocked the listener but we do it again
 # just in case that step had failed
