--- a/.github/workflows/oracle-db-oem-password-rotation-schedule.yml
+++ b/.github/workflows/oracle-db-oem-password-rotation-schedule.yml
@@ -23,8 +23,16 @@ jobs:
       - name: Filter Oem Password Rotation Schedule
         id: filter-password-rotation-schedule
         run: |
-             SCHEDULED_JSON=$(jq '[.[] | select (.CronSchedule=="${{ github.event.schedule }}") | {"TargetOemEnvironment","TargetEnvironmentName","SyncMonitoringPasswords","RotateRMANPassword","RotateOEMPasswords"}]' operations/.github/workflows/oracle-db-oem-password-rotation-schedule.json | jq '{include: .}')
-             echo "scheduling_matrix="$(echo ${SCHEDULED_JSON} | sed 's/ //g') >> $GITHUB_OUTPUT
+          # For OEM password rotation (not RMAN password rotation) which runs on schedule "00 20 * * SUN" 
+          # run the rotation only on the first Sunday of the month
+          DAY_OF_MONTH=$((10#$(date +%d)))
+          if [[ "${{ github.event.schedule }}" == "00 20 * * SUN" && ${DAY_OF_MONTH} -gt 7 ]]
+          then
+            SCHEDULED_JSON='{"include":[]}'
+          else
+            SCHEDULED_JSON=$(jq '[.[] | select (.CronSchedule=="${{ github.event.schedule }}") | {"TargetOemEnvironment","TargetEnvironmentName","SyncMonitoringPasswords","RotateRMANPassword","RotateOEMPasswords"}]' operations/.github/workflows/oracle-db-oem-password-rotation-schedule.json | jq '{include: .}')
+          fi
+          echo "scheduling_matrix="$(echo ${SCHEDULED_JSON} | sed 's/ //g') >> $GITHUB_OUTPUT
 
   report-schedule-password-rotation:
     needs: prepare-run-matrix
